--- a/a_star.ipynb
+++ b/a_star.ipynb
@@ -2,41 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c44d74b8",
+   "execution_count": 1,
+   "id": "8f9e403e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connessioni tra città\n",
-    "\n",
+    "#connessioni tra città adiacenti con relative distanze\n",
     "connections = {}\n",
     "\n",
-    "connections['Arad'] = {'Sibiu', 'Timisoara', 'Zerind'}\n",
-    "connections['Bucarest'] = {'Fagaras', 'Giurgiu', 'Pitesti', 'Urziceni'}\n",
-    "connections['Craiova'] = {'Drobeta', 'Pitesti', 'Rimnicu Vilcea'}\n",
-    "connections['Drobeta'] = {'Craiova', 'Mehadia'}\n",
-    "connections['Eforie'] = {'Hirsova'}\n",
-    "connections['Fagaras'] = {'Bucarest', 'Sibiu'}\n",
-    "connections['Giurgiu'] = {'Bucarest'}\n",
-    "connections['Hirsova'] = {'Eforie', 'Urziceni'}\n",
-    "connections['Iasi'] = {'Neamt', 'Vaslui'}\n",
-    "connections['Lugoj'] = {'Mehadia', 'Timisoara'}\n",
-    "connections['Mehadia'] = {'Drobeta', 'Lugoj'}\n",
-    "connections['Neamt'] = {'Iasi'}\n",
-    "connections['Oradea'] = {'Sibiu', 'Zerind'}\n",
-    "connections['Pitesti'] = {'Bucarest', 'Craiova', 'Rimnicu Vilcea'}\n",
-    "connections['Rimnicu Vilcea'] = {'Craiova', 'Pitesti', 'Sibiu'}\n",
-    "connections['Sibiu'] = {'Arad', 'Fagaras', 'Oradea', 'Rimnicu Vilcea'}\n",
-    "connections['Timisoara'] = {'Arad', 'Lugoj'}\n",
-    "connections['Urziceni'] = {'Bucarest', 'Hirsova', 'Vaslui'}\n",
-    "connections['Vaslui'] = {'Iasi', 'Urziceni'}\n",
-    "connections['Zerind'] = {'Arad', 'Oradea'}"
+    "connections['Arad'] = [['Sibiu', 140], ['Timisoara', 118], ['Zerind', 751]]\n",
+    "connections['Bucarest'] = [['Fagaras', 211], ['Giurgiu', 90], ['Pitesti', 101], ['Urziceni', 85]]\n",
+    "connections['Craiova'] = [['Drobeta', 120], ['Pitesti', 138], ['Rimnicu Vilcea', 146]] \n",
+    "connections['Drobeta'] = [['Craiova', 120], ['Mehadia', 75]]\n",
+    "connections['Eforie'] = [['Hirsova', 86]]\n",
+    "connections['Fagaras'] =[['Bucarest', 211], ['Sibiu', 99]]\n",
+    "connections['Giurgiu'] = [['Bucarest', 90]]\n",
+    "connections['Hirsova'] = [['Eforie', 86], ['Urziceni', 98]]\n",
+    "connections['Iasi'] = [['Neamt', 87], ['Vaslui', 92]]\n",
+    "connections['Lugoj'] = [['Mehadia', 70], ['Timisoara', 111]]\n",
+    "connections['Mehadia'] = [['Drobeta', 75], ['Lugoj', 70]]\n",
+    "connections['Neamt'] = [['Iasi', 87]]\n",
+    "connections['Oradea'] = [['Sibiu', 151], ['Zerind', 71]]\n",
+    "connections['Pitesti'] = [['Bucarest', 101], ['Craiova', 138], ['Rimnicu Vilcea', 97]]\n",
+    "connections['Rimnicu Vilcea'] = [['Craiova', 146], ['Pitesti', 97], ['Sibiu', 80]]\n",
+    "connections['Sibiu'] = [['Arad', 140], ['Fagaras', 99], ['Oradea', 151], ['Rimnicu Vilcea', 80]]\n",
+    "connections['Timisoara'] = [['Arad', 118], ['Lugoj', 111]]\n",
+    "connections['Urziceni'] = [['Bucarest', 85], ['Hirsova', 98], ['Vaslui', 142]]\n",
+    "connections['Vaslui'] = [['Iasi', 92], ['Urziceni', 142]]\n",
+    "connections['Zerind'] = [['Arad', 75], ['Oradea', 71]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "09b293ac",
+   "execution_count": 2,
+   "id": "836fe12f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,19 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a7c52433",
+   "execution_count": 3,
+   "id": "f3259391",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
     "    \n",
-    "    def __init__(self, state, parent, h):\n",
+    "    def __init__(self, state, parent, f, partial_path):\n",
     "        self.state = state\n",
     "        self.depth = 0\n",
     "        self.children = []\n",
     "        self.parent = parent\n",
-    "        self.heuristic = h\n",
+    "        self.f = f\n",
+    "        self.partial_path = partial_path\n",
     "        \n",
     "        \n",
     "    def addChild(self, childNode):\n",
@@ -92,13 +92,13 @@
     "    def printPath(self):\n",
     "        if self.parent != None:\n",
     "            self.parent.printPath()\n",
-    "        print(\"-> \", self.state.name)"
+    "        print(\"-> \", self.state.name)        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5b504801",
+   "execution_count": 4,
+   "id": "1fb93478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,28 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2d9737d7",
+   "execution_count": 5,
+   "id": "51398242",
    "metadata": {},
    "outputs": [],
    "source": [
     "import queue\n",
     "\n",
-    "def greedy_best_first_search():\n",
-    "\n",
+    "def a_star():\n",
     "    fringe = queue.PriorityQueue()\n",
     "    visited = []\n",
     "    \n",
     "    initialState = State()\n",
-    "    euristica = h[initialState.name]  \n",
     "    \n",
-    "    root = Node(initialState, None, euristica)\n",
-    "       \n",
-    "    fringe.put((root.heuristic, root))\n",
+    "    root = Node(initialState, None, h[initialState.name], 0)\n",
+    "    fringe.put((root.f, root))\n",
     "    \n",
     "    while not fringe.empty():\n",
-    "\n",
+    "        \n",
     "        _, currentNode = fringe.get()\n",
+    "        \n",
     "        print(\"-- dequeue --\", currentNode.state.name)\n",
     "        \n",
     "        visited.append(currentNode.state.name)\n",
@@ -156,20 +154,20 @@
     "            currentNode.printPath()\n",
     "            break\n",
     "            \n",
-    "        for childState in currentNode.state.successorFunction():\n",
-    "            euristica = h[childState]\n",
-    "            childNode = Node(State(childState), currentNode, euristica)  \n",
+    "        for(childState, distance) in currentNode.state.successorFunction():\n",
+    "            g = currentNode.partial_path + distance\n",
+    "            f = g + h[childState]\n",
+    "            childNode = Node(State(childState), currentNode, f, g)\n",
     "            \n",
-    "            if childNode.state.name not in visited:\n",
-    "                \n",
-    "                currentNode.addChild(childNode)\n",
-    "                fringe.put((childNode.heuristic, childNode))"
+    "            if(childNode.state.name not in visited):\n",
+    "                fringe.put((f, childNode))\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2c35476e",
+   "execution_count": 6,
+   "id": "888e929b",
    "metadata": {},
    "outputs": [
     {
@@ -178,20 +176,23 @@
      "text": [
       "-- dequeue -- Arad\n",
       "-- dequeue -- Sibiu\n",
+      "-- dequeue -- Rimnicu Vilcea\n",
       "-- dequeue -- Fagaras\n",
+      "-- dequeue -- Pitesti\n",
       "-- dequeue -- Bucarest\n",
       "Stato obiettivo raggiunto\n",
       "----------------------\n",
       "Soluzione:\n",
       "->  Arad\n",
       "->  Sibiu\n",
-      "->  Fagaras\n",
+      "->  Rimnicu Vilcea\n",
+      "->  Pitesti\n",
       "->  Bucarest\n"
      ]
     }
    ],
    "source": [
-    "greedy_best_first_search()"
+    "a_star()"
    ]
   }
  ],
