--- a/genetic_algorithm_continuous.ipynb
+++ b/genetic_algorithm_continuous.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,9 +243,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">0, new best f([-0.14961470969710877, 1.1017776760509657]) = 1.236\n",
+      ">0, new best f([-0.6299687190051113, 0.789730678263524]) = 1.021\n",
+      ">1, new best f([-0.01747158007171734, -0.3751430533302811]) = 0.141\n",
+      ">2, new best f([-0.007705806057831666, -0.3751430533302811]) = 0.141\n",
+      ">3, new best f([-0.007705806057831666, -0.3717860685130079]) = 0.138\n",
+      ">3, new best f([0.24773022049286642, 0.26405737392233153]) = 0.131\n",
+      ">3, new best f([-0.16304264896620158, 0.2532234683756771]) = 0.091\n",
+      ">4, new best f([-0.18455786984054345, -0.14076447699702488]) = 0.054\n",
+      ">4, new best f([-0.14961470969710877, 0.17143511100938458]) = 0.052\n",
+      ">4, new best f([-0.01823453116655216, -0.2246890974288549]) = 0.051\n",
+      ">4, new best f([-0.11070420386053303, 0.19218738078889164]) = 0.049\n",
+      ">5, new best f([-0.07148851758602248, 0.17143511100938458]) = 0.035\n",
+      ">6, new best f([-0.03242542153047978, 0.17143511100938458]) = 0.030\n",
+      ">6, new best f([-0.02861066605630569, -0.14091706721599184]) = 0.021\n",
+      ">6, new best f([-0.04524299992370473, -0.04844739452201097]) = 0.004\n",
+      ">10, new best f([-0.03273060196841371, 0.015182726787212886]) = 0.001\n",
+      ">11, new best f([-0.03242542153047978, 0.015182726787212886]) = 0.001\n",
+      ">11, new best f([-0.0022125581750209733, 0.026474402990768198]) = 0.001\n",
+      ">12, new best f([-0.005569542992294174, 0.010147249561303084]) = 0.000\n",
+      ">13, new best f([-0.0022125581750209733, 0.010147249561303084]) = 0.000\n",
+      ">13, new best f([-0.006179903868162029, 0.007248035400930775]) = 0.000\n",
+      ">14, new best f([-0.006179903868162029, 0.0054169527733272105]) = 0.000\n",
+      ">14, new best f([-0.0020599679560540096, 0.002365148393987937]) = 0.000\n",
+      ">15, new best f([-0.001449607080186155, 0.002365148393987937]) = 0.000\n",
+      ">16, new best f([-0.001449607080186155, 0.0020599679560540096]) = 0.000\n",
+      ">17, new best f([-0.001449607080186155, 0.0011444266422522276]) = 0.000\n",
+      ">20, new best f([-0.001449607080186155, 0.0006866559853513365]) = 0.000\n",
+      ">24, new best f([-0.001449607080186155, 0.0005340657663843729]) = 0.000\n",
+      ">25, new best f([-0.0008392462043183002, 0.0005340657663843729]) = 0.000\n",
+      ">26, new best f([-0.0003814755474174092, 0.0005340657663843729]) = 0.000\n",
+      ">27, new best f([-0.0002288853284504455, 0.0005340657663843729]) = 0.000\n",
+      ">27, new best f([-0.0003814755474174092, 0.0003814755474174092]) = 0.000\n",
+      ">29, new best f([-0.0002288853284504455, 0.0003814755474174092]) = 0.000\n",
+      ">30, new best f([-7.629510948348184e-05, 0.0003814755474174092]) = 0.000\n",
+      ">30, new best f([-7.629510948348184e-05, 0.0002288853284504455]) = 0.000\n",
+      ">32, new best f([-7.629510948348184e-05, 7.629510948348184e-05]) = 0.000\n",
+      "Done!\n",
+      "f([-7.629510948348184e-05, 7.629510948348184e-05]) = 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "best, score = genetic_algorithm(objective, bounds, n_bits, n_iter, n_pop, r_cross, r_mut)\n",
     "print('Done!')\n",
@@ -372,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +431,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c149fc0de0885611b468a0cc37d69aa5a86a4dd00b4e9702a10e3c4cb95c4c6c"
+   }
   }
  },
  "nbformat": 4,
