--- a/genetic_algorithm_discrete.ipynb
+++ b/genetic_algorithm_discrete.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,19 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "def genetic_algorithm(objective, n_bits, n_iter, n_pop, r_cross, r_mut):\n",
     "    # initial population of random bitstring\n",
     "    pop = [randint(0, 2, n_bits).tolist() for _ in range(n_pop)]\n",
+    "    \n",
     "    # keep track of best solution\n",
-    "    best, best_eval = 0, objective(pop[0])\n",
+    "    best, best_eval = pop[0], objective(pop[0])\n",
+    "    \n",
     "    # enumerate generations\n",
     "    for gen in range(n_iter):\n",
+    "        \n",
     "        # evaluate all candidates in the population\n",
     "        scores = [objective(c) for c in pop]\n",
+    "        \n",
     "        # check for new best solution\n",
     "        for i in range(n_pop):\n",
     "            if scores[i] < best_eval:\n",
@@ -125,6 +129,7 @@
     "                print(\">%d, new best f(%s) = %.3f\" % (gen,  pop[i], scores[i]))\n",
     "        # select parents\n",
     "        selected = [selection(pop, scores) for _ in range(n_pop)]\n",
+    "        \n",
     "        # create the next generation\n",
     "        children = list()\n",
     "        for i in range(0, n_pop, 2):\n",
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the total iterations\n",
     "n_iter = 100\n",
     "# bits\n",
-    "n_bits = 20\n",
+    "n_bits = 30\n",
     "# define the population size\n",
     "n_pop = 100\n",
     "# crossover rate\n",
@@ -200,24 +205,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">0, new best f([1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1]) = -11.000\n",
-      ">0, new best f([0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1]) = -13.000\n",
-      ">0, new best f([1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1]) = -14.000\n",
-      ">0, new best f([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1]) = -15.000\n",
-      ">1, new best f([1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1]) = -16.000\n",
-      ">2, new best f([1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]) = -17.000\n",
-      ">4, new best f([1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0]) = -18.000\n",
-      ">5, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0]) = -19.000\n",
-      ">7, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -20.000\n",
+      ">0, new best f([1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1]) = -18.000\n",
+      ">0, new best f([1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1]) = -19.000\n",
+      ">0, new best f([1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1]) = -20.000\n",
+      ">0, new best f([1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1]) = -21.000\n",
+      ">1, new best f([0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1]) = -22.000\n",
+      ">2, new best f([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0]) = -23.000\n",
+      ">2, new best f([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1]) = -24.000\n",
+      ">3, new best f([1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -25.000\n",
+      ">4, new best f([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]) = -26.000\n",
+      ">5, new best f([1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -27.000\n",
+      ">7, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1]) = -28.000\n",
+      ">8, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -29.000\n",
+      ">8, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -30.000\n",
       "Done!\n",
-      "f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -20.000000\n"
+      "f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -30.000000\n"
      ]
     }
    ],
@@ -236,27 +245,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -265,25 +253,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0],\n",
-       " [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1],\n",
-       " [1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       " [0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1],\n",
-       " [0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0],\n",
-       " [1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0],\n",
-       " [0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1],\n",
-       " [1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1],\n",
-       " [0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1]]"
+       "[[0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1],\n",
+       " [0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0],\n",
+       " [0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1],\n",
+       " [0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0],\n",
+       " [1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0],\n",
+       " [0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1],\n",
+       " [0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1],\n",
+       " [1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
+       " [1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0],\n",
+       " [1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,14 +279,22 @@
    "source": [
     "n_pop = 10\n",
     "n_bits = 15\n",
-    "pop = [randint(0, 2, n_bits).tolist() for _ in range(n_pop)]\n",
+    "pop = []\n",
+    "for _ in range(n_pop):\n",
+    "    p = []\n",
+    "    for _ in range(n_bits):\n",
+    "        if rand() > 0.5:\n",
+    "            p.append(0)\n",
+    "        else:   \n",
+    "            p.append(1)\n",
+    "    pop.append(p)\n",
     "\n",
     "pop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +303,7 @@
        "list"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-8, -13, -8, -5, -8, -8, -6, -9, -9, -9]"
+       "[-6, -4, -9, -8, -9, -9, -9, -13, -8, -8]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,16 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[6, 2]"
+       "[0, 1]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,25 +363,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1],\n",
-       " [0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0],\n",
-       " [0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1],\n",
-       " [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0],\n",
-       " [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       " [0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1],\n",
-       " [0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0]]"
+       "[[1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
+       " [0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1],\n",
+       " [1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
+       " [0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0],\n",
+       " [1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1],\n",
+       " [0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1],\n",
+       " [1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
+       " [1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1],\n",
+       " [0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1],\n",
+       " [1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,16 +412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1]"
+       "[0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0]"
+       "[1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,15 +452,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-9\n",
+      "-13\n",
+      "-11\n",
+      "-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(onemax(p1))\n",
+    "print(onemax(p2))\n",
+    "print(onemax(c1))\n",
+    "print(onemax(c2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p2"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +530,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c149fc0de0885611b468a0cc37d69aa5a86a4dd00b4e9702a10e3c4cb95c4c6c"
+   }
   }
  },
  "nbformat": 4,
